--- a/webDev3/main.html
+++ b/webDev3/main.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+     <script src="script.js"></script>
 </head>
 <body>
 
-    <h1>Hello Sohum</h1>
-    <p>learning html and css</p>
-    
     <!-- <h1>Hello Sohum</h1>
-    <p>learning html and css</p>
-    <div id = "parent" style = "color: green; font-size: 50px;"> here is a div
-        <div class = "child"> here is a div inside of another div</div>
-        <div class = "child"> here is a div inside of another div</div>
+    <p>learning html and css</p> -->
+<!--     
+    <h1>Hello Sohum</h1>
+    <div id = "parent"> 
+        <div class = "child"> Child</div>
+        <div class = "child"> Child</div>
+        <div class = "child"> Child</div>
     </div> -->
     
 </body>
