--- a/webDev3/main.html
+++ b/webDev3/main.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-     <script src="script.js"></script>
+    <script src="script.js"></script>
 </head>
+
+
 <body>
 
     <!-- <h1>Hello Sohum</h1>
     <p>learning html and css</p> -->
-<!--     
-    <h1>Hello Sohum</h1>
+
+    <!-- <h1>Hello Welcome to Web Dev 3</h1>
+    <h2>Hello Welcome to Web Dev 3</h2>
+    <h3>Hello Welcome to Web Dev 3</h3>
+    <h4>Hello Welcome to Web Dev 3</h4>
+    <p>Hello Welcome to Web Dev 3</p> -->
+
+
+ 
+    <h1>Hello Akkeem</h1>
     <div id = "parent"> 
         <div class = "child"> Child</div>
         <div class = "child"> Child</div>
         <div class = "child"> Child</div>
-    </div> -->
+    </div> 
+
+
     
 </body>
 </html>
