--- a/webDev3/main.html
+++ b/webDev3/main.html
@@ -19,17 +19,21 @@
     <h2>Hello Welcome to Web Dev 3</h2>
     <h3>Hello Welcome to Web Dev 3</h3>
     <h4>Hello Welcome to Web Dev 3</h4>
-    <p>Hello Welcome to Web Dev 3</p> -->
-
+    <p>Hello Welcome to Web Dev 3</p>
+ -->
 
  
-    <h1>Hello Akkeem</h1>
+    <h1>Hello Isaiah</h1>
     <div id = "parent"> 
         <div class = "child"> Child</div>
         <div class = "child"> Child</div>
         <div class = "child"> Child</div>
+        <div class = "child"> Child</div>
+        <div class = "child"> Child</div>
+        <div class = "child"> Child</div>
+        <div class = "child"> Child</div>
+        <div class = "child"> Child</div>
     </div> 
-    <button id = "changeText">Change Text</button>
 
 
     
