added examples of EDP + Async

--- a/webDev3/main.html
+++ b/webDev3/main.html
@@ -12,30 +12,20 @@
 
 <body>
 
-    <!-- <h1>Hello Sohum</h1>
-    <p>learning html and css</p> -->
 
-    <!-- <h1>Hello Welcome to Web Dev 3</h1>
-    <h2>Hello Welcome to Web Dev 3</h2>
-    <h3>Hello Welcome to Web Dev 3</h3>
-    <h4>Hello Welcome to Web Dev 3</h4>
-    <p>Hello Welcome to Web Dev 3</p>
- -->
-
- 
-    <h1>Hello Isaiah</h1>
-    <div id = "parent"> 
-        <div class = "child"> Child</div>
-        <div class = "child"> Child</div>
-        <div class = "child"> Child</div>
-        <div class = "child"> Child</div>
-        <div class = "child"> Child</div>
-        <div class = "child"> Child</div>
-        <div class = "child"> Child</div>
-        <div class = "child"> Child</div>
-    </div> 
+    <h1>Hello TTPR</h1>
+    <div id="parent">
+        <button class="child"> mybutton1</button>
+        <!-- <button class="child"> mybutton2</button>
+        <button class="child"> mybutton3</button>
+        <button class="child"> mybutton4</button>
+        <button class="child"> mybutton5</button>
+        <button class="child"> mybutton6</button>
+        <button class="child"> mybutton7</button> -->
+    </div>
 
 
-    
+
 </body>
+
 </html>
